<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- home screen strings -->
    <string name="app_name">MobileAppsCW</string>
    <string name="home">Home</string>
    <string name="time">%1$s:%2$s:%3$s</string>
    <string name="remaining_time">Remaining until new questions</string>
    <string name="example_question">IN WHAT YEAR DID ROOSEVELT BECOME PRESIDENT?</string>
    <string name="friends_list">Friends:</string>
    <string name="userPFP">profile picture</string>
    <string name="last_question">Here is your previous question</string>

    <!-- quiz screen strings -->
    <string name="question_difficulty">your selected difficulty is %1$s</string>
    <string name="count_pref">you are getting %1$s questions</string>
    <string name="question_type">your questions are %1$s</string>
    <string name="question_categories">your selected category is %1$s</string>
    <string name="current_question">current question: </string>

    <string name="question_count">this is question %1$s of %2$s</string>
    <string name="this_question_difficulty">question difficulty: %1$s</string>
    <string name="this_question_type">question type: %1$s</string>
    <string name="this_question_category">question category: %1$s</string>

    <string name="submit_question_button">SUBMIT ANSWER</string>
    <string name="all_questions_complete">You have completed all your questions for today!</string>
    <string name="correct_answer">correct, well done!</string>
    <string name="wrong_answer">Sorry, the right answer was %1$s</string>

    <!-- login and register screen strings -->
    <string name="login">Please Sign In</string>
    <string name="register">Please Register</string>
    <string name="log_in_here">If you have an account, Sign in here: </string>
    <string name="username_here">Username: </string>
    <string name="password_here">Password: </string>
    <string name="confirm_password">Confirm Password: </string>
    <string name="email_here">Email: </string>
    <string name="log_in_button">SIGN IN</string>
    <string name="checkbox_stay_signed_in">Remember me?</string>
    <string name="create_account_here">otherwise, please create an account here: </string>
    <string name="create_account_button">REGISTER</string>
    <string name="two_factor_auth_button">TWO FACTOR AUTHENTICATION</string>
    <string name="register_failed">registration failed, do you already have an account?</string>
    <string name="login_failed">login failed, did you input the correct details?</string>
    <string name="go_to_account_register_button">ACCOUNT CREATION</string>

    <!-- account and settings screen strings -->
    <string name="account">Account</string>
    <string name="add_friend">Add a friend by email: </string>
    <string name="edit_button">EDIT</string>
    <string name="security_settings">Security settings: </string>
    <string name="example_email">email@example.com</string>
    <string name="manage_email_password_button">MANAGE YOUR EMAIL AND PASSWORD</string>
    <string name="delete_button">DELETE ACCOUNT</string>
    <string name="see_account_button">SEE YOUR PROFILE</string>
    <string name="customise_profile_button">CUSTOMISE YOUR PROFILE</string>
    <string name="add_friend_button">ADD FRIEND</string>
    <string name="question_settings">Question Settings: </string>
    <string name="change_prefs_button">CHANGE PREFERENCES</string>

    <!-- app bar menu -->
    <string name="log_out">log out</string>
    <string name="settings">settings</string>
    <string name="alarm">alarm</string>
    <string name="profile">profile</string>
    <string name="quiz">quiz</string>

    <!-- alarm screen -->
    <string name="current_alarm">current alarm: %1$s : %2$s</string>
    <string name="set_alarm">use the clock then set your alarm here</string>
    <string name="create_alarm_button">CREATE ALARM</string>
    <string name="alarm_on">ALARM ON</string>
    <string name="cancel_button" tools:ignore="ButtonCase">CANCEL</string>


    <!-- accessibility -->
    <string name="pfp_button_context">this is for you to change your profile picture</string>
    
    <!-- api call strings (sorry about the question count ik its awful)-->
    <string name="trivia_API_base_url">https://opentdb.com/api.php?amount=%1$s&amp;category=%2$s&amp;difficulty=%3$s&amp;type=%4$s</string>
    <string-array name="categories">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
    <string-array name="difficulty">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="type">
        <item>Any Type</item>
        <item>Multiple Choice</item>
        <item>True / False</item>
    </string-array>
    <string-array name="count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
</resources>