<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        style="@style/TextAppearance.MaterialComponents.Headline2"
        android:textStyle="bold"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signInHereText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/log_in_here"
        android:textSize="20sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginEmailField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/email_here"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        android:textSize="20sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginPasswordField"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:hint="@string/password_here"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOnBackground"
        android:textSize="20sp"
        android:background="@drawable/rounded_corners"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="15dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/log_in_button"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rememberMe"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/checkbox_stay_signed_in"
            android:textColor="?attr/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerHereText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_account_here"
        android:textSize="20sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goToCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/go_to_account_register_button"
        android:textSize="30sp"/>
</androidx.appcompat.widget.LinearLayoutCompat>